fix login alignment

--- a/src/app/modules/login/components/login-form/login-form.component.css
+++ b/src/app/modules/login/components/login-form/login-form.component.css
@@ -25,6 +25,7 @@ body {
 }
 @media (max-width: 767px) {
   .page {
+    width:100%;
     height: auto;
     margin-bottom: 20px;
     padding-bottom: 20px;
